[gd_scene load_steps=4 format=2]

[ext_resource path="res://PlanetFeature.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 84.1643

[node name="PlanetFeature" type="Node2D"]
script = ExtResource( 1 )

[node name="Detector" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
modulate = Color( 0.54902, 0.0196078, 0.737255, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.46633, 1.46633 )
texture = ExtResource( 2 )
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
